--- a/front/login.html
+++ b/front/login.html
@@ -40,6 +40,7 @@
     <script type="application/ecmascript" src="app/controllers/baseformcontroller.js"></script>
     <script type="application/ecmascript" src="app/service/baseapiservice.js"></script>
     <script type="application/ecmascript" src="app/service/useraccountapi.js"></script>
+    <script type="application/ecmascript" src="app/service/sharedapi.js"></script>
     <script type="application/ecmascript" src="app/service/listeapi.js"></script>
     <script type="application/ecmascript" src="app/service/produitapi.js"></script>
     <script type="application/ecmascript" src="app/controllers/login.js"></script>
