--- a/front/login.html
+++ b/front/login.html
@@ -30,6 +30,9 @@
             <div class="row">
                 <button class="waves-effect waves-light btn" onclick="loginController.authenticate()"><i class="material-icons right">check</i>Se connecter</button>
             </div>
+            <div class="row">
+                <button class="waves-effect waves-light btn" onclick="window.location.replace('inscription.html')"><i class="material-icons right">check</i>S'inscrire</button>
+            </div>
         </div>
     </div>
 
