--- a/front/changeMDP.html
+++ b/front/changeMDP.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <div class="container">
-    <h3>Validation</h3>
+    <h3>Changement mot de passe</h3>
     <div id="champs">
         <div class="row">
             <form class="col s12" id="formLogin">
