--- a/front/inscription.html
+++ b/front/inscription.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <div class="container">
-    <h3>Connexion</h3>
+    <h3>Inscription</h3>
     <div>
         <div class="row">
             <form class="col s12" id="formLogin">
