--- a/front/changeMDP.html
+++ b/front/changeMDP.html
@@ -7,34 +7,65 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="res/css/login_register.css"/>
     <link rel="stylesheet" type="text/css" href="res/css/index.css"/>
+    <link rel="stylesheet" type="text/css" href="res/css/responsive.css"/>
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"/>
 </head>
 <body>
 <div class="container">
-    <h3>Changement mot de passe</h3>
-    <div id="champs">
-        <div class="row">
-            <form class="col s12" id="formLogin">
-                <div class="row">
-                    <div class="input-field col s12">
-                        <input id="fieldLogin" type="text" class="validate" value="btssio.quillianchardon@gmail.com">
-                        <label for="fieldLogin" class="active">Adresse e-mail</label>
+    <h1 class="center-align">Changement mot de passe</h1>
+    <div id="containerForm">
+        <div class="cont">
+            <div class="form sign-in">
+                <label id="marginBot">
+                    <span>Email</span>
+                    <input id="fieldLogin" type="text" class="" value="btssio.quillianchardon@gmail.com"/>
+                </label>
+                <span id="relatSpan">
+                    <p class="forgot-pass" onclick="window.location.replace('login.html')">Connexion ?</p>
+                </span>
+                <button type="button" class="submit" onclick="changeMDPController.sendMail()"><i class="fas fa-check"></i>Recevoir mail</button>
+
+            </div>
+            <div class="sub-cont">
+                    <div class="img">
+                    <div class="img__text m--up">
+                        <h2>Tu as oublié ton mot de passe ?</h2>
+                        <p><br>Pas de panique on te permet de le retrouver en tappant ton adresse mail<br> il te sera envoyé un lien pour le rénitaliser !</p>
                     </div>
                 </div>
-            </form>
-        </div>
-        <div class="row">
-            <button class="waves-effect waves-light btn" onclick="changeMDPController.sendMail()"><i class="material-icons right">check</i>recevoir mail</button>
+            </div>
         </div>
     </div>
-    <div class="row">
-        <button class="waves-effect waves-light btn" onclick="window.location.replace('login.html')"><i class="material-icons right">check</i>Se connecter</button>
-    </div>
-    <div class="row">
-        <button class="waves-effect waves-light btn" onclick="window.location.replace('inscription.html')"><i class="material-icons right">check</i>S'inscrire</button>
-    </div>
-</div>
+    <div class="form_login_register">
+        <div class="log-fom responsiveForm">
 
+            <p class="bigLetter">Tu as oublié ton mot de passe ?</p>
+            <p><br>Pas de panique on te permet de le retrouver en tappant ton adresse mail<br> il te sera envoyé un lien pour le rénitaliser !</p>
+            <label id="marginBot">
+                <span>Email</span>
+                <input id="fieldLoginResponsive" type="text" class="" value="btssio.quillianchardon@gmail.com"/>
+            </label>
+            <button type="button" class="submit" onclick="changeMDPController.sendMail()"><i class="fas fa-check"></i>Recevoir mail</button>
+            <div class="row">
+                <button class="submit" onclick="window.location.replace('login.html')"><i class="fas fa-check"></i>Se connecter</button>
+            </div>
+        </div>
+    </div>
+
+</div>
+<script>
+    //login
+    document.getElementById("fieldLogin").addEventListener("change", function (){
+        document.getElementById("fieldLoginResponsive").value=this.value
+    });
+    document.getElementById("fieldLoginResponsive").addEventListener("change", function (){
+        document.getElementById("fieldLogin").value=this.value
+    });
+</script>
 <script type="application/ecmascript" src="app/tools.js"></script>
 <script type="application/ecmascript" src="app/model/classes.js"></script>
 <script type="application/ecmascript" src="app/model/model.js"></script>
