--- a/front/index.html
+++ b/front/index.html
@@ -5,22 +5,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"/>
     <link rel="stylesheet" type="text/css" href="res/css/index.css"/>
+    <link rel="stylesheet" type="text/css" href="res/css/responsive.css"/>
 </head>
 <body>
-
 
     <div id="content"></div>
     <div id="modalConformDelet" class="modal">
         <div class="modal-content">
-            <h4>supprimer</h4>
+            <h4>Supprimer</h4>
             <p> supprimer l'element <span id="objectDelet"></span>?</p>
         </div>
         <div class="model-footer">
-            <button class="waves-effect waves-light btn" id="btnDelet" >suppr</button>
+            <button class="btn btn-primary borderRadus paddingGlobal" id="btnDelet" >effacer&nbsp;<i class="fas fa-trash-alt"></i></button>
         </div>
     </div>
 
@@ -60,7 +63,7 @@
             </label>
         </div>
         <div class="model-footer">
-            <button class="waves-effect waves-light btn" id="addUserShared" onclick="indexController.addShared()">add</button>
+            <button class="btn btn-primary borderRadus paddingGlobal" id="addUserShared" onclick="indexController.addShared()">Ajouter&nbsp;<i class="fas fa-plus"></i></button>
         </div>
     </div>
 
@@ -76,6 +79,13 @@
     <script type="application/ecmascript" src="app/service/sharedapi.js"></script>
     <script type="application/ecmascript" src="app/service/listeapi.js"></script>
     <script type="application/ecmascript" src="app/service/produitapi.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
     <script>navigate("index")</script>
 </body>
 </html>
+<style>
+    .sidenav-overlay{
+        display: none;
+        opacity: 0;
+    }
+</style>
