--- a/front/index.html
+++ b/front/index.html
@@ -32,7 +32,7 @@
     <div id="modalSharedDisplay" class="modal">
         <div class="modal-content">
             <h4>visualisation des partage</h4>
-            <table class="stripped responsive-table">
+            <table class="table table-hover">
                 <thead>
                 <tr>
                     <th>nom</th>
