--- a/front/login.html
+++ b/front/login.html
@@ -190,6 +190,7 @@
     <script type="application/ecmascript" src="app/service/sharedapi.js"></script>
     <script type="application/ecmascript" src="app/service/listeapi.js"></script>
     <script type="application/ecmascript" src="app/service/produitapi.js"></script>
+    <script type="application/ecmascript" src="app/service/notificationapi.js"></script>
     <script type="application/ecmascript" src="app/controllers/login.js"></script>
     <script type="application/ecmascript" src="app/controllers/inscription.js"></script>
 </body>
