--- a/front/changeMDP.html
+++ b/front/changeMDP.html
@@ -76,6 +76,9 @@
 <script type="application/ecmascript" src="app/service/sharedapi.js"></script>
 <script type="application/ecmascript" src="app/service/listeapi.js"></script>
 <script type="application/ecmascript" src="app/service/produitapi.js"></script>
+<script type="application/ecmascript" src="app/service/notificationapi.js"></script>
+<script type="application/ecmascript" src="app/service/typePaymentapi.js"></script>
+<script type="application/ecmascript" src="app/service/abonnementapi.js"></script>
 <script type="application/ecmascript" src="app/controllers/changeMDP.js"></script>
 </body>
 </html>
