--- a/front/login.html
+++ b/front/login.html
@@ -191,6 +191,8 @@
     <script type="application/ecmascript" src="app/service/listeapi.js"></script>
     <script type="application/ecmascript" src="app/service/produitapi.js"></script>
     <script type="application/ecmascript" src="app/service/notificationapi.js"></script>
+    <script type="application/ecmascript" src="app/service/typePaymentapi.js"></script>
+    <script type="application/ecmascript" src="app/service/abonnementapi.js"></script>
     <script type="application/ecmascript" src="app/controllers/login.js"></script>
     <script type="application/ecmascript" src="app/controllers/inscription.js"></script>
 </body>
