--- a/front/verif.html
+++ b/front/verif.html
@@ -26,7 +26,8 @@
 <script type="application/ecmascript" src="app/service/useraccountapi.js"></script>
 <script type="application/ecmascript" src="app/service/sharedapi.js"></script>
 <script type="application/ecmascript" src="app/service/listeapi.js"></script>
-<script type="application/ecmascript" src="app/service/produitapi.js"></script>
+<script type="application/ecmascript" src="app/service/produitapi.js"></script
+<script type="application/ecmascript" src="app/service/typePaymentapi.js"></script>>
 <script type="application/ecmascript" src="app/controllers/verif.js"></script>
 </body>
 </html>
