--- a/front/index.html
+++ b/front/index.html
@@ -90,6 +90,8 @@
     <script type="application/ecmascript" src="app/service/listeapi.js"></script>
     <script type="application/ecmascript" src="app/service/produitapi.js"></script>
     <script type="application/ecmascript" src="app/service/notificationapi.js"></script>
+    <script type="application/ecmascript" src="app/service/typePaymentapi.js"></script>
+    <script type="application/ecmascript" src="app/service/abonnementapi.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
     <script>navigate("index")    </script>
 </body>
