--- a/front/login.html
+++ b/front/login.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Exemples NodeJS+Express</title>
+    <title>Note'Tout</title>
     <meta charset="UTF-8">
+    <link rel="icon" href="res/icon/icon.png" sizes="192x192">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
@@ -19,7 +20,7 @@
 
     <div class="container">
         <span>
-            <h1 class="center-align">List'tout</h1>
+            <h1 class="center-align">Note'tout</h1>
             <div id="containerForm">
                 <div class="cont">
                     <div class="form sign-in">
