--- a/front/verif.html
+++ b/front/verif.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Exemples NodeJS+Express</title>
+    <title>Note'Tout</title>
+    <link rel="icon" href="res/icon/icon.png" sizes="192x192">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -26,8 +27,10 @@
 <script type="application/ecmascript" src="app/service/useraccountapi.js"></script>
 <script type="application/ecmascript" src="app/service/sharedapi.js"></script>
 <script type="application/ecmascript" src="app/service/listeapi.js"></script>
-<script type="application/ecmascript" src="app/service/produitapi.js"></script
-<script type="application/ecmascript" src="app/service/typePaymentapi.js"></script>>
+<script type="application/ecmascript" src="app/service/produitapi.js"></script>
+<script type="application/ecmascript" src="app/service/notificationapi.js"></script>
+<script type="application/ecmascript" src="app/service/typePaymentapi.js"></script>
+<script type="application/ecmascript" src="app/service/abonnementapi.js"></script>
 <script type="application/ecmascript" src="app/controllers/verif.js"></script>
 </body>
 </html>
