modification du html

--- a/front/index.html
+++ b/front/index.html
@@ -53,7 +53,7 @@
             <h4>Ajout d'un partage</h4>
             <div class="input-field col s12">
                 <select id="listeUser">
-                    <option value="-1" disabled selected>Choose your option</option>
+                    <option value="-1" disabled selected>Choisir un utilisateur</option>
                 </select>
                 <label>Choisir un utilisateur</label>
             </div>
